--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,7 +20,8 @@
             </intent-filter>
         </activity>
         <service android:name=".basicService.MyService"/>
-        <service android:name=".BoundService" android:enabled="true" android:exported="true"/>
+        <service android:name=".boundService.MyBoundService" android:enabled="true" android:exported="true"/>
+        <service android:name=".simpleBoundService.BoundService" android:enabled="true" android:exported="true"/>
     </application>
 
 </manifest>
